Limpia JAVA_HOME en los .bat y documenta el troubleshooting del piloto
Los .bat ahora incluyen "set JAVA_HOME=" antes de invocar Logstash
(quedo pendiente de un commit anterior). Se documenta en
ELK_RIS_METRICS.md el proceso real de puesta en marcha en el primer
hospital piloto: el problema de JVM/JAVA_HOME externo en Logstash, y
un problema no relacionado en Elasticsearch (carpeta temporal del
usuario de servicio inaccesible, Error 1067) que tumbaba el cluster
entero. Ninguno de los dos era un bug de nuestros .conf.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0179fc9FJpdZNnS9cHfhouNc